--- a/styles/xacaro_landingpage/xacaro.css
+++ b/styles/xacaro_landingpage/xacaro.css
@@ -8,7 +8,7 @@
 }
 @font-face {
   font-family: "Montserrat_bold";
-  src: url("../../assets/fonts/Montserrat-ExtraBold.ttf");
+  src: url("../../assets/fonts/Montserrat-Bold.ttf");
 }
 html,
 body {
@@ -24,13 +24,21 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 24px;
-  padding-top: 24px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+@media only screen and (max-width: 500px) {
+  .xacaro_logo_lontiner {
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
 }
 
 body {
   overflow-x: hidden;
   max-width: 100vw;
+  margin-left: 12px;
+  margin-right: 12px;
 }
 
 .first_section_new {
@@ -47,23 +55,26 @@ body {
   justify-content: center;
   text-align: center;
 }
-.first_section_new .banner_text_1 p {
+.first_section_new .banner_text_1 {
   font-family: "Kelvin";
   margin-bottom: 24px;
   font-size: 54px;
   line-height: 70px;
   color: #ffffff;
   font-weight: 700;
+  letter-spacing: -2px;
   text-align: center;
+  text-shadow: 0px 6px 14px rgba(0, 0, 0, 0.2509803922);
 }
-.first_section_new .banner_text_2 p {
+.first_section_new .banner_text_2 {
   font-family: "Montserrat";
-  margin-bottom: 56px;
+  margin-bottom: 72px;
   font-size: 20px;
   color: #ffffff;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 24px;
-  letter-spacing: 0.5px;
+  letter-spacing: 0.9px;
+  text-shadow: 0px 6px 14px rgba(0, 0, 0, 0.2509803922);
 }
 .first_section_new .rotate_Button {
   position: relative;
@@ -81,15 +92,15 @@ body {
   width: 100px;
   height: 100px;
   border: 0;
-  font-size: 18px;
+  font-size: 14px;
   border-radius: 50%;
-  font-family: "Raleway", sans-serif;
   transition: 0.6s;
   overflow: hidden;
+  text-align: center;
   text-transform: none;
-  font-weight: 500;
   z-index: 1000;
   font-weight: 600;
+  line-height: 19px;
   font-family: "Montserrat";
 }
 .first_section_new .rotate_Button .rotate_image {
@@ -99,7 +110,8 @@ body {
   position: absolute;
   top: -21.2%;
   left: 50%;
-  animation: 10s rotate_image infinite alternate-reverse;
+  animation: 15s linear 2s rotate_image infinite;
+  animation-iteration-count: infinite;
 }
 @keyframes rotate_image {
   from {
@@ -119,7 +131,7 @@ body {
   }
 }
 @media only screen and (max-width: 767px) {
-  .first_section_new .banner_text_1 p {
+  .first_section_new .banner_text_1 {
     margin-bottom: 24px;
     font-size: 35px;
     line-height: 40px;
@@ -129,7 +141,7 @@ body {
     padding-left: 15px;
     padding-right: 15px;
   }
-  .first_section_new .banner_text_2 p {
+  .first_section_new .banner_text_2 {
     padding-left: 15px;
     padding-right: 15px;
   }
@@ -258,6 +270,9 @@ body {
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amount_box .returns_percent {
   padding-top: 6px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amount_box .investing_percentage {
   display: flex;
@@ -286,6 +301,9 @@ body {
   font-size: 11px;
   color: #0d1822;
   font-family: "Montserrat";
+  margin-left: 10px;
+  margin-right: 0;
+  margin-top: 10px;
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider .option_default {
   display: block;
@@ -300,9 +318,12 @@ body {
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider .option_default option {
   rotate: 270deg;
   font-weight: 600;
-  font-size: 11px;
+  font-size: 14px;
   color: #0d1822;
   font-family: "Montserrat";
+  margin-left: 10px;
+  margin-right: 0;
+  margin-top: 10px;
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider .amout_slider_label {
   display: flex;
@@ -317,11 +338,23 @@ body {
   font-family: "Montserrat";
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider .amout_slider_label .amount {
-  font-weight: 700;
+  font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   color: #0d1822;
-  font-family: "Montserrat";
+  font-family: "Montserrat_bold";
+}
+.calculate_section .parent .card_parent .calculate_card .investing_amout_slider .investing_slider {
+  position: relative;
+}
+.calculate_section .parent .card_parent .calculate_card .investing_amout_slider .investing_slider .value_slider {
+  top: 4px;
+  height: 10px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  position: absolute;
+  background: #0088ff;
+  z-index: 1;
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider .investing_slider .investing_slider_range {
   -webkit-appearance: none;
@@ -331,6 +364,7 @@ body {
   height: 10px;
   border-radius: 8px;
   background: #f0f3f5;
+  position: relative;
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider .investing_slider .investing_slider_range::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -342,12 +376,16 @@ body {
   background: url("../../assets/images/thumb.svg");
   background-repeat: no-repeat;
   cursor: pointer;
+  z-index: 10;
 }
 .calculate_section .parent .card_parent .calculate_card .investing_amout_slider .investing_slider .investing_slider_range::-webkit-slider-runnable-track {
-  background: #0088ff;
   height: 8px;
   border-radius: 10px;
   width: 30px;
+  z-index: 10;
+}
+.calculate_section .parent .card_parent .performance_slider {
+  margin-top: 20px;
 }
 .calculate_section .parent .card_parent .performance_slider .option_mobile {
   display: none;
@@ -362,9 +400,12 @@ body {
 .calculate_section .parent .card_parent .performance_slider .option_mobile option {
   rotate: 270deg;
   font-weight: 600;
-  font-size: 11px;
+  font-size: 14px;
   color: #0d1822;
   font-family: "Montserrat";
+  margin-left: 10px;
+  margin-right: 0;
+  margin-top: 10px;
 }
 .calculate_section .parent .card_parent .performance_slider .option_default {
   display: block;
@@ -379,9 +420,12 @@ body {
 .calculate_section .parent .card_parent .performance_slider .option_default option {
   rotate: 270deg;
   font-weight: 600;
-  font-size: 11px;
+  font-size: 14px;
   color: #0d1822;
   font-family: "Montserrat";
+  margin-left: 10px;
+  margin-right: 0;
+  margin-top: 10px;
 }
 .calculate_section .parent .card_parent .performance_slider .amout_slider_label {
   display: flex;
@@ -396,11 +440,23 @@ body {
   font-family: "Montserrat";
 }
 .calculate_section .parent .card_parent .performance_slider .amout_slider_label .amount {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   color: #0d1822;
-  font-family: "Montserrat";
+  font-family: "Montserrat_bold";
+}
+.calculate_section .parent .card_parent .performance_slider .investing_slider {
+  position: relative;
+}
+.calculate_section .parent .card_parent .performance_slider .investing_slider .value_slider {
+  top: 4px;
+  height: 10px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  position: absolute;
+  background: #0088ff;
+  z-index: 1;
 }
 .calculate_section .parent .card_parent .performance_slider .investing_slider .performance_range {
   -webkit-appearance: none;
@@ -410,6 +466,7 @@ body {
   height: 10px;
   border-radius: 8px;
   background: #f0f3f5;
+  position: relative;
 }
 .calculate_section .parent .card_parent .performance_slider .investing_slider .performance_range::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -421,14 +478,16 @@ body {
   background: url("../../assets/images/thumb.svg");
   background-repeat: no-repeat;
   cursor: pointer;
+  z-index: 10;
 }
 .calculate_section .parent .card_parent .performance_slider .investing_slider .performance_range::-webkit-slider-runnable-track {
-  background: #0088ff;
   height: 8px;
-  border-radius: 8px;
+  border-radius: 10px;
+  width: 30px;
+  z-index: 10;
 }
-.calculate_section .parent .card_parent .performance_slider .investing_slider .performance_range::-webkit-range-progress {
-  background: #f0f5f2;
+.calculate_section .parent .card_parent .investing_year_slider {
+  margin-top: 20px;
 }
 .calculate_section .parent .card_parent .investing_year_slider .option_mobile {
   display: none;
@@ -443,9 +502,12 @@ body {
 .calculate_section .parent .card_parent .investing_year_slider .option_mobile option {
   rotate: 270deg;
   font-weight: 600;
-  font-size: 11px;
+  font-size: 14px;
   color: #0d1822;
   font-family: "Montserrat";
+  margin-left: 10px;
+  margin-right: 0;
+  margin-top: 10px;
 }
 .calculate_section .parent .card_parent .investing_year_slider .option_default {
   display: block;
@@ -460,9 +522,12 @@ body {
 .calculate_section .parent .card_parent .investing_year_slider .option_default option {
   rotate: 270deg;
   font-weight: 600;
-  font-size: 11px;
+  font-size: 14px;
   color: #0d1822;
   font-family: "Montserrat";
+  margin-left: 10px;
+  margin-right: 0;
+  margin-top: 10px;
 }
 .calculate_section .parent .card_parent .investing_year_slider .amout_slider_label {
   display: flex;
@@ -477,11 +542,23 @@ body {
   font-family: "Montserrat";
 }
 .calculate_section .parent .card_parent .investing_year_slider .amout_slider_label .amount {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   color: #0d1822;
-  font-family: "Montserrat";
+  font-family: "Montserrat_bold";
+}
+.calculate_section .parent .card_parent .investing_year_slider .investing_slider {
+  position: relative;
+}
+.calculate_section .parent .card_parent .investing_year_slider .investing_slider .value_slider {
+  top: 4px;
+  height: 10px;
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
+  position: absolute;
+  background: #0088ff;
+  z-index: 1;
 }
 .calculate_section .parent .card_parent .investing_year_slider .investing_year_range {
   -webkit-appearance: none;
@@ -491,6 +568,7 @@ body {
   height: 10px;
   border-radius: 8px;
   background: #f0f3f5;
+  position: relative;
 }
 .calculate_section .parent .card_parent .investing_year_slider .investing_year_range::-webkit-slider-thumb {
   -webkit-appearance: none;
@@ -502,14 +580,13 @@ body {
   background: url("../../assets/images/thumb.svg");
   background-repeat: no-repeat;
   cursor: pointer;
+  z-index: 10;
 }
 .calculate_section .parent .card_parent .investing_year_slider .investing_year_range::-webkit-slider-runnable-track {
-  background: #0088ff;
   height: 8px;
-  border-radius: 8px;
-}
-.calculate_section .parent .card_parent .investing_year_slider .investing_year_range::-webkit-range-progress {
-  background: #f0f5f2;
+  border-radius: 10px;
+  width: 30px;
+  z-index: 10;
 }
 
 @media only screen and (max-width: 1020px) {
@@ -804,6 +881,7 @@ body {
   position: relative;
   overflow: hidden;
   margin: 20px 0;
+  padding-bottom: 40px;
 }
 .how_its_work_section .timeline_root .conference-timeline-content .timeline-article .content-left-container {
   max-width: 380px;
@@ -831,9 +909,10 @@ body {
   line-height: 32px;
   color: #000000;
   margin: 0px;
-  font-family: "Montserrat";
+  font-family: "Montserrat_bold";
 }
 .how_its_work_section .timeline_root .conference-timeline-content .timeline-article .content-left .timeline_subtitle {
+  padding-top: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -851,9 +930,10 @@ body {
   line-height: 32px;
   color: #000000;
   margin: 0px;
-  font-family: "Montserrat";
+  font-family: "Montserrat_bold";
 }
 .how_its_work_section .timeline_root .conference-timeline-content .timeline-article .content-right .timeline_subtitle {
+  padding-top: 10px;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
@@ -892,6 +972,7 @@ body {
   line-height: 32px;
   color: #97aaba;
   z-index: 5;
+  font-family: "Montserrat";
 }
 @media only screen and (max-width: 780px) {
   .how_its_work_section .doted {
@@ -952,6 +1033,7 @@ body {
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article {
     display: block;
     overflow: visible;
+    padding-bottom: 0px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .meta-date {
     margin-left: 0;
@@ -980,7 +1062,7 @@ body {
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left .timeline_img {
     width: 100%;
     max-width: 300px;
-    max-height: 75px;
+    max-height: 100px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left:before {
     display: none;
@@ -992,7 +1074,7 @@ body {
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right .timeline_img {
     width: 100%;
     max-width: 300px;
-    max-height: 75px;
+    max-height: 100px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right:before {
     display: none;
@@ -1044,7 +1126,7 @@ body {
     max-width: 300px;
   }
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 530px) {
   .how_its_work_section .timeline_root .direction_timeline {
     display: flex !important;
     flex-direction: column-reverse !important;
@@ -1053,6 +1135,85 @@ body {
     padding-top: 0px;
     width: 100%;
   }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .center_line_img {
+    display: none;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article {
+    padding-bottom: 10px;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .meta-date {
+    display: none;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left-container {
+    margin: auto;
+    max-width: 290px;
+    width: 100%;
+    float: none;
+    min-height: 53px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right-container {
+    margin: auto;
+    max-width: 290px;
+    width: 100%;
+    float: none;
+    min-height: 53px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left {
+    width: 100%;
+    max-width: 290px;
+    padding: 0px 0px;
+    margin-top: 12px;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right {
+    width: 100%;
+    max-width: 290px;
+    padding: 0px 0px;
+    margin-top: 12px;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .timeline_img {
+    width: 100%;
+    max-width: 200px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .how_its_work_section .work_1 p {
+    padding-top: 60px;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 48px;
+    text-align: center;
+    color: black;
+    font-family: "Kelvin";
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .how_its_work_section .work_2 p {
+    font-family: "Montserrat";
+    padding-top: 16px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 24px;
+    text-align: center;
+    color: rgb(158, 155, 155);
+  }
+  .how_its_work_section .timeline_root .direction_timeline {
+    display: flex !important;
+    flex-direction: column-reverse !important;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content {
+    padding-top: 0px;
+    width: 100%;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article {
+    padding-bottom: 0px;
+    margin-top: 20px;
+  }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .meta-date {
     height: 50px;
     width: 50px;
@@ -1060,25 +1221,51 @@ body {
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left-container {
     width: 100%;
-    max-width: 200px;
-    padding: 8px 0px;
+    max-width: 300px;
     margin-bottom: 0px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right-container {
     width: 100%;
-    max-width: 200px;
-    padding: 8px 0px;
+    max-width: 300px;
     margin-bottom: 0px;
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left {
     width: 100%;
-    max-width: 200px;
-    padding: 8px 0px;
+    min-width: 300px;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left .timeline_title {
+    font-weight: 600;
+    font-size: 24px;
+    color: #000000;
+    margin: 0px;
+    font-family: "Montserrat_bold";
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-left .timeline_subtitle {
+    padding-top: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    color: #c7c7c7;
+    margin: 0px;
+    font-family: "Montserrat";
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right {
     width: 100%;
-    max-width: 200px;
-    padding: 8px 0px;
+    min-width: 300px;
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right .timeline_title {
+    font-weight: 600;
+    font-size: 24px;
+    color: #000000;
+    margin: 0px;
+    font-family: "Montserrat_bold";
+  }
+  .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .content-right .timeline_subtitle {
+    padding-top: 10px;
+    font-weight: 500;
+    font-size: 16px;
+    color: #c7c7c7;
+    margin: 0px;
+    font-family: "Montserrat";
   }
   .how_its_work_section .timeline_root .conference-timeline-content .center_line2 .timeline-article .timeline_img {
     width: 100%;
@@ -1122,6 +1309,12 @@ body {
   margin: 0px;
   padding-top: 6px;
   font-family: "Montserrat";
+}
+@media only screen and (max-width: 960px) {
+  .cards_section .card_container .card_item {
+    width: none;
+    min-width: 290px;
+  }
 }
 
 @media only screen and (max-width: 390px) {
@@ -1185,7 +1378,7 @@ body {
   align-items: center;
   color: white;
   margin: 0px;
-  padding-top: 10px;
+  padding-top: 20px;
   font-family: "Montserrat";
 }
 .footer_section .wait_list_button:hover {
@@ -1211,12 +1404,12 @@ body {
   height: auto;
   border: none;
   outline: none;
-  font-weight: 700;
+  font-weight: 200;
   font-size: 18px;
   line-height: 24px;
   text-align: center;
   color: #0088ff;
-  font-family: "Montserrat";
+  font-family: "Montserrat_bold";
   background-color: white;
 }
 .footer_section .bottom_xacro {
@@ -1284,7 +1477,7 @@ body {
 }
 @media only screen and (max-width: 440px) {
   .footer_section .bottom_xacro {
-    margin-top: 25px;
+    margin-top: 50px;
     padding-top: 10px;
     display: flex;
     align-items: center;
