--- a/styles/xacaro_landingpage/xacaro.scss
+++ b/styles/xacaro_landingpage/xacaro.scss
@@ -8,7 +8,7 @@
 }
 @font-face {
   font-family: "Montserrat_bold";
-  src: url("../../assets/fonts/Montserrat-ExtraBold.ttf");
+  src: url("../../assets/fonts/Montserrat-Bold.ttf");
 }
 
 html,
@@ -24,12 +24,19 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 24px;
-  padding-top: 24px;
+  padding-bottom: 20px;
+  padding-top: 20px;
+
+  @media only screen and (max-width: 500px) {
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
 }
 body {
   overflow-x: hidden;
   max-width: 100vw;
+  margin-left: 12px;
+  margin-right: 12px;
 }
 
 .first_section_new {
@@ -48,24 +55,26 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-
-  .banner_text_1 p {
+  .banner_text_1 {
     font-family: "Kelvin";
     margin-bottom: 24px;
     font-size: 54px;
     line-height: 70px;
     color: #ffffff;
     font-weight: 700;
+    letter-spacing: -2px;
     text-align: center;
+    text-shadow: 0px 6px 14px #00000040;
   }
-  .banner_text_2 p {
+  .banner_text_2 {
     font-family: "Montserrat";
-    margin-bottom: 56px;
+    margin-bottom: 72px;
     font-size: 20px;
     color: #ffffff;
-    font-weight: 500;
+    font-weight: 600;
     line-height: 24px;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.9px;
+    text-shadow: 0px 6px 14px #00000040;
   }
 
   .rotate_Button {
@@ -85,15 +94,15 @@ body {
       width: 100px;
       height: 100px;
       border: 0;
-      font-size: 18px;
+      font-size: 14px;
       border-radius: 50%;
-      font-family: "Raleway", sans-serif;
       transition: 0.6s;
       overflow: hidden;
+      text-align: center;
       text-transform: none;
-      font-weight: 500;
       z-index: 1000;
       font-weight: 600;
+      line-height: 19px;
       font-family: "Montserrat";
     }
     .rotate_image {
@@ -103,7 +112,8 @@ body {
       position: absolute;
       top: -21.2%;
       left: 50%;
-      animation: 10s rotate_image infinite alternate-reverse;
+      animation: 15s linear 2s rotate_image infinite;
+      animation-iteration-count: infinite;
     }
     @keyframes rotate_image {
       from {
@@ -125,7 +135,7 @@ body {
     }
   }
   @media only screen and (max-width: 767px) {
-    .banner_text_1 p {
+    .banner_text_1 {
       margin-bottom: 24px;
       font-size: 35px;
       line-height: 40px;
@@ -135,7 +145,7 @@ body {
       padding-left: 15px;
       padding-right: 15px;
     }
-    .banner_text_2 p {
+    .banner_text_2 {
       padding-left: 15px;
       padding-right: 15px;
     }
@@ -270,12 +280,15 @@ body {
           }
           .returns_percent {
             padding-top: 6px;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
           }
           .investing_percentage {
             display: flex;
             justify-content: center;
             align-items: center;
-            .slider_img{
+            .slider_img {
               width: 80%;
             }
           }
@@ -301,6 +314,9 @@ body {
               font-size: 11px;
               color: #0d1822;
               font-family: "Montserrat";
+              margin-left: 10px;
+              margin-right: 0;
+              margin-top: 10px;
             }
           }
 
@@ -317,9 +333,12 @@ body {
             option {
               rotate: 270deg;
               font-weight: 600;
-              font-size: 11px;
+              font-size: 14px;
               color: #0d1822;
               font-family: "Montserrat";
+              margin-left: 10px;
+              margin-right: 0;
+              margin-top: 10px;
             }
           }
 
@@ -336,15 +355,26 @@ body {
               font-family: "Montserrat";
             }
             .amount {
-              font-weight: 700;
+              font-weight: 500;
               font-size: 16px;
               line-height: 24px;
               color: #0d1822;
-              font-family: "Montserrat";
+              font-family: "Montserrat_bold";
             }
           }
 
           .investing_slider {
+            position: relative;
+
+            .value_slider {
+              top: 4px;
+              height: 10px;
+              border-bottom-left-radius: 4px;
+              border-top-left-radius: 4px;
+              position: absolute;
+              background: #0088ff;
+              z-index: 1;
+            }
             .investing_slider_range {
               -webkit-appearance: none;
               appearance: none;
@@ -352,6 +382,7 @@ body {
               height: 10px;
               border-radius: 8px;
               background: #f0f3f5;
+              position: relative;
             }
 
             .investing_slider_range::-webkit-slider-thumb {
@@ -364,18 +395,20 @@ body {
               background: url("../../assets/images/thumb.svg");
               background-repeat: no-repeat;
               cursor: pointer;
+              z-index: 10;
             }
             .investing_slider_range::-webkit-slider-runnable-track {
-              background: #0088ff;
               height: 8px;
               border-radius: 10px;
               width: 30px;
+              z-index: 10;
             }
           }
         }
       }
 
       .performance_slider {
+        margin-top: 20px;
         .option_mobile {
           display: none;
 
@@ -390,9 +423,12 @@ body {
           option {
             rotate: 270deg;
             font-weight: 600;
-            font-size: 11px;
+            font-size: 14px;
             color: #0d1822;
             font-family: "Montserrat";
+            margin-left: 10px;
+            margin-right: 0;
+            margin-top: 10px;
           }
         }
 
@@ -409,9 +445,12 @@ body {
           option {
             rotate: 270deg;
             font-weight: 600;
-            font-size: 11px;
+            font-size: 14px;
             color: #0d1822;
             font-family: "Montserrat";
+            margin-left: 10px;
+            margin-right: 0;
+            margin-top: 10px;
           }
         }
         .amout_slider_label {
@@ -427,14 +466,25 @@ body {
             font-family: "Montserrat";
           }
           .amount {
-            font-weight: 600;
+            font-weight: 500;
             font-size: 16px;
             line-height: 24px;
             color: #0d1822;
-            font-family: "Montserrat";
+            font-family: "Montserrat_bold";
           }
         }
         .investing_slider {
+          position: relative;
+
+          .value_slider {
+            top: 4px;
+            height: 10px;
+            border-bottom-left-radius: 4px;
+            border-top-left-radius: 4px;
+            position: absolute;
+            background: #0088ff;
+            z-index: 1;
+          }
           .performance_range {
             -webkit-appearance: none;
             appearance: none;
@@ -442,7 +492,7 @@ body {
             height: 10px;
             border-radius: 8px;
             background: #f0f3f5;
-            // overflow: hidden;
+            position: relative;
           }
 
           .performance_range::-webkit-slider-thumb {
@@ -455,20 +505,19 @@ body {
             background: url("../../assets/images/thumb.svg");
             background-repeat: no-repeat;
             cursor: pointer;
+            z-index: 10;
           }
           .performance_range::-webkit-slider-runnable-track {
-            background: #0088ff;
             height: 8px;
-            border-radius: 8px;
-          }
-          .performance_range::-webkit-range-progress {
-            background: #f0f5f2;
+            border-radius: 10px;
+            width: 30px;
+            z-index: 10;
           }
         }
       }
 
       .investing_year_slider {
-        // margin-top: 28px;
+        margin-top: 20px;
 
         .option_mobile {
           display: none;
@@ -484,9 +533,12 @@ body {
           option {
             rotate: 270deg;
             font-weight: 600;
-            font-size: 11px;
+            font-size: 14px;
             color: #0d1822;
             font-family: "Montserrat";
+            margin-left: 10px;
+            margin-right: 0;
+            margin-top: 10px;
           }
         }
 
@@ -503,9 +555,12 @@ body {
           option {
             rotate: 270deg;
             font-weight: 600;
-            font-size: 11px;
+            font-size: 14px;
             color: #0d1822;
             font-family: "Montserrat";
+            margin-left: 10px;
+            margin-right: 0;
+            margin-top: 10px;
           }
         }
         .amout_slider_label {
@@ -521,22 +576,35 @@ body {
             font-family: "Montserrat";
           }
           .amount {
-            font-weight: 600;
+            font-weight: 500;
             font-size: 16px;
             line-height: 24px;
             color: #0d1822;
-            font-family: "Montserrat";
+            font-family: "Montserrat_bold";
+          }
+        }
+        .investing_slider {
+          position: relative;
+
+          .value_slider {
+            top: 4px;
+            height: 10px;
+            border-bottom-left-radius: 4px;
+            border-top-left-radius: 4px;
+            position: absolute;
+            background: #0088ff;
+            z-index: 1;
           }
         }
 
         .investing_year_range {
           -webkit-appearance: none;
-          appearance: none;
-          width: 100%;
-          height: 10px;
-          border-radius: 8px;
-          background: #f0f3f5;
-          // overflow: hidden;
+              appearance: none;
+              width: 100%;
+              height: 10px;
+              border-radius: 8px;
+              background: #f0f3f5;
+              position: relative;
         }
 
         .investing_year_range::-webkit-slider-thumb {
@@ -549,14 +617,13 @@ body {
           background: url("../../assets/images/thumb.svg");
           background-repeat: no-repeat;
           cursor: pointer;
+          z-index: 10;
         }
         .investing_year_range::-webkit-slider-runnable-track {
-          background: #0088ff;
           height: 8px;
-          border-radius: 8px;
-        }
-        .investing_year_range::-webkit-range-progress {
-          background: #f0f5f2;
+          border-radius: 10px;
+          width: 30px;
+          z-index: 10;
         }
       }
     }
@@ -906,6 +973,8 @@ body {
         position: relative;
         overflow: hidden;
         margin: 20px 0;
+        padding-bottom: 40px;
+
         .content-left-container {
           max-width: 380px;
           min-height: 165px;
@@ -932,9 +1001,10 @@ body {
             line-height: 32px;
             color: #000000;
             margin: 0px;
-            font-family: "Montserrat";
+            font-family: "Montserrat_bold";
           }
           .timeline_subtitle {
+            padding-top: 10px;
             font-weight: 500;
             font-size: 16px;
             line-height: 24px;
@@ -953,9 +1023,10 @@ body {
             line-height: 32px;
             color: #000000;
             margin: 0px;
-            font-family: "Montserrat";
+            font-family: "Montserrat_bold";
           }
           .timeline_subtitle {
+            padding-top: 10px;
             font-weight: 500;
             font-size: 16px;
             line-height: 24px;
@@ -997,6 +1068,7 @@ body {
             line-height: 32px;
             color: #97aaba;
             z-index: 5;
+            font-family: "Montserrat";
           }
         }
       }
@@ -1064,6 +1136,8 @@ body {
           .timeline-article {
             display: block;
             overflow: visible;
+            padding-bottom: 0px;
+
             .meta-date {
               margin-left: 0;
               left: 20px;
@@ -1091,7 +1165,7 @@ body {
               .timeline_img {
                 width: 100%;
                 max-width: 300px;
-                max-height: 75px;
+                max-height: 100px;
               }
               &:before {
                 display: none;
@@ -1103,7 +1177,7 @@ body {
               .timeline_img {
                 width: 100%;
                 max-width: 300px;
-                max-height: 75px;
+                max-height: 100px;
               }
               &:before {
                 display: none;
@@ -1168,7 +1242,87 @@ body {
       }
     }
   }
+  @media only screen and (max-width: 530px) {
+    .timeline_root {
+      .direction_timeline {
+        display: flex !important;
+        flex-direction: column-reverse !important;
+      }
+      .conference-timeline-content {
+        padding-top: 0px;
+        width: 100%;
+        .center_line2 {
+          .center_line_img {
+            display: none;
+          }
+          .timeline-article {
+            padding-bottom: 10px;
+            .meta-date {
+              display: none;
+            }
+            .content-left-container {
+              margin: auto;
+              max-width: 290px;
+              width: 100%;
+              float: none;
+              min-height: 53px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+            .content-right-container {
+              margin: auto;
+              max-width: 290px;
+              width: 100%;
+              float: none;
+              min-height: 53px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+            }
+            .content-left {
+              width: 100%;
+              max-width: 290px;
+              padding: 0px 0px;
+              margin-top: 12px;
+            }
+            .content-right {
+              width: 100%;
+              max-width: 290px;
+              padding: 0px 0px;
+              margin-top: 12px;
+            }
+            .timeline_img {
+              width: 100%;
+              max-width: 200px;
+            }
+          }
+        }
+      }
+    }
+  }
   @media only screen and (max-width: 400px) {
+    .work_1 p {
+      padding-top: 60px;
+      font-size: 30px;
+      font-weight: 700;
+      line-height: 48px;
+      text-align: center;
+      color: black;
+      font-family: "Kelvin";
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    .work_2 p {
+      font-family: "Montserrat";
+      padding-top: 16px;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 24px;
+      text-align: center;
+      color: rgb(158, 155, 155);
+    }
     .timeline_root {
       .direction_timeline {
         display: flex !important;
@@ -1179,6 +1333,8 @@ body {
         width: 100%;
         .center_line2 {
           .timeline-article {
+            padding-bottom: 0px;
+            margin-top: 20px;
             .meta-date {
               height: 50px;
               width: 50px;
@@ -1186,25 +1342,52 @@ body {
             }
             .content-left-container {
               width: 100%;
-              max-width: 200px;
-              padding: 8px 0px;
+              max-width: 300px;
               margin-bottom: 0px;
             }
             .content-right-container {
               width: 100%;
-              max-width: 200px;
-              padding: 8px 0px;
+              max-width: 300px;
               margin-bottom: 0px;
             }
             .content-left {
               width: 100%;
-              max-width: 200px;
-              padding: 8px 0px;
+              min-width: 300px;
+
+              .timeline_title {
+                font-weight: 600;
+                font-size: 24px;
+                color: #000000;
+                margin: 0px;
+                font-family: "Montserrat_bold";
+              }
+              .timeline_subtitle {
+                padding-top: 10px;
+                font-weight: 500;
+                font-size: 16px;
+                color: #c7c7c7;
+                margin: 0px;
+                font-family: "Montserrat";
+              }
             }
             .content-right {
               width: 100%;
-              max-width: 200px;
-              padding: 8px 0px;
+              min-width: 300px;
+              .timeline_title {
+                font-weight: 600;
+                font-size: 24px;
+                color: #000000;
+                margin: 0px;
+                font-family: "Montserrat_bold";
+              }
+              .timeline_subtitle {
+                padding-top: 10px;
+                font-weight: 500;
+                font-size: 16px;
+                color: #c7c7c7;
+                margin: 0px;
+                font-family: "Montserrat";
+              }
             }
             .timeline_img {
               width: 100%;
@@ -1235,24 +1418,32 @@ body {
       justify-content: space-between;
       flex-wrap: nowrap;
       align-items: center;
-   
-        .card_title {
-          font-size: 32px;
-          line-height: 40px;
-          color: #445361;
-          font-weight: 100;
-          margin: 0px;
-          font-family: "Montserrat_bold";
-        }
-        .card_subtitle {
-          font-weight: 500;
-          font-size: 18px;
-          line-height: 20px;
-          color: #677f94;
-          margin: 0px;
-          padding-top: 6px;
-          font-family: "Montserrat";
-        }
+
+      .card_title {
+        font-size: 32px;
+        line-height: 40px;
+        color: #445361;
+        font-weight: 100;
+        margin: 0px;
+        font-family: "Montserrat_bold";
+      }
+      .card_subtitle {
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 20px;
+        color: #677f94;
+        margin: 0px;
+        padding-top: 6px;
+        font-family: "Montserrat";
+      }
+    }
+  }
+  @media only screen and (max-width: 960px) {
+    .card_container {
+      .card_item {
+        width: none;
+        min-width: 290px;
+      }
     }
   }
 }
@@ -1324,7 +1515,7 @@ body {
     align-items: center;
     color: #ffff;
     margin: 0px;
-    padding-top: 10px;
+    padding-top: 20px;
     font-family: "Montserrat";
   }
 
@@ -1351,12 +1542,12 @@ body {
       height: auto;
       border: none;
       outline: none;
-      font-weight: 700;
+      font-weight: 200;
       font-size: 18px;
       line-height: 24px;
       text-align: center;
       color: #0088ff;
-      font-family: "Montserrat";
+      font-family: "Montserrat_bold";
       background-color: #ffff;
     }
   }
@@ -1430,7 +1621,7 @@ body {
   }
   @media only screen and (max-width: 440px) {
     .bottom_xacro {
-      margin-top: 25px;
+      margin-top: 50px;
       padding-top: 10px;
       display: flex;
       align-items: center;
